# duckdb

./: pipeline_00.py  pyproject.toml
