[tool.poetry]
name = "projetoduckdb"
version = "0.1.0"
description = ""
authors = ["Argus Portal <argusportal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
gdown = "^5.2.0"
streamlit = "^1.39.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.35"
duckdb = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
